# sensor_fusion

src/message_master/common_msgs/: CMakeLists.txt
src/message_master/common_msgs/msg/: BoundingBox.msg  BoundingBoxes.msg  CameraFault.msg  CommonFault.msg  Lane.msg  LocalPose.md  LocalPose.msg  LocalPose.msg_old  MmWave_Objects.msg  NotifyPlan.msg  RD_result.msg  RD_result.msg_  ReferenceLineDualLocalization.msg  ReferencePointDualLocalization.msg  Route.msg  Route2.msg  Route3.msg  SystemFault.msg  TSRList.msg  TaskPoint2.msg  TrafficLightResult.msg  TrafficSignalRecognition.msg  Ultrasonic.msg  UwbPosition.msg  VehicleInfo.md  VehicleInfo.msg  VehiclePose.msg  cicv_moving_object.msg  cicv_moving_object__.msg  cicv_moving_objects.msg  mmwave_object.msg  moving_object.md  ndtTimeAndScore.msg
src/sensors_fusion/: CMakeLists.txt  package.xml
src/sensors_fusion/include/include/: obstacle_multi_sensor_fusion.h  sensors_fusion.h
src/sensors_fusion/include/include/base/: frame.h  fusion_log.h  object_pool_types.h  scene.h  sensor.h  sensor_data_manager.h  sensor_frame.h  sensor_object.h  track.h  track_pool_types.h
src/sensors_fusion/include/include/common/: basic.h  common.h  connected_component_analysis.h  environment.h  hungarian_optimizer.h  information_filter.h  kalman_filter.h  time.h
src/sensors_fusion/include/include/common/math/: aabox2d.h  aaboxkdtree2d.h  box2d.h  cartesian_frenet_conversion.h  hermite_spline.h  kalman_filter.h  line_segment2d.h  linear_interpolation.h  math_utils.h  matrix_operations.h  mpc_osqp.h  polygon2d.h  quaternion.h
src/sensors_fusion/include/include/common/sensor_manager/: sensor_manager.h
src/sensors_fusion/include/include/lib/config_manager/: config_manager.h
src/sensors_fusion/include/include/lib/data_association/hm_data_association/: hm_tracks_objects_match.h  projection_cache.h  track_object_distance.h  track_object_similarity.h
src/sensors_fusion/include/include/lib/data_fusion/: dst_existence_fusion.h  dst_type_fusion.h  kalman_motion_fusion.h  pbf_shape_fusion.h  pbf_tracker.h
src/sensors_fusion/include/include/lib/fusion_system/probabilistic_fusion/: probabilistic_fusion.h
src/sensors_fusion/include/include/lib/gatekeeper/pbf_gatekeeper/: pbf_gatekeeper.h
src/sensors_fusion/include/include/lib/gatekeeper/pbf_gatekeeper/proto/: pbf_gatekeeper_config.pb.cc  pbf_gatekeeper_config.pb.h
src/sensors_fusion/include/include/lib/interface/: base_data_association.h  base_existence_fusion.h  base_fusion_system.h  base_gatekeeper.h  base_motion_fusion.h  base_multisensor_fusion.h  base_shape_fusion.h  base_tracker.h  base_type_fusion.h
src/sensors_fusion/include/include/lib/registerer/: registerer.h
src/sensors_fusion/include/include/util/: blob.h  box.h  concurrent_object_pool.h  file.h  frame_supplement.h  gated_hungarian_bigraph_matcher.h  hdmap_struct.h  image.h  image_8u.h  landmark_struct.h  lane_struct.h  light_object_pool.h  macros.h  object.h  object_pool_types.h  object_supplement.h  perf_util.h  point_cloud.h  point_cloud_util.h  string_util.h  syncedmem.h  traffic_light.h
src/sensors_fusion/launch/: sensors_fusion.launch
src/sensors_fusion/proto/: dst_existence_fusion_config.pb.cc  dst_existence_fusion_config.pb.h  dst_type_fusion_config.pb.cc  dst_type_fusion_config.pb.h  geometry.pb.cc  geometry.pb.h  pbf_tracker_config.pb.cc  pbf_tracker_config.pb.h  perception_config_schema.pb.cc  perception_config_schema.pb.h  pnc_point.pb.cc  pnc_point.pb.h  probabilistic_fusion_config.pb.cc  probabilistic_fusion_config.pb.h  sensor_meta_schema.pb.cc  sensor_meta_schema.pb.h
src/sensors_fusion/src/: main.cpp  obstacle_multi_sensor_fusion.cc  sensors_fusion.cc
src/sensors_fusion/src/base/: base_init_options.cc  object_pool_types.cc  scene.cc  sensor.cc  sensor_data_manager.cc  sensor_frame.cc  sensor_object.cc  track.cc  track_pool_types.cc
src/sensors_fusion/src/common/: connected_component_analysis.cc  dst_evidence.cc  duration.cc  information_filter.cc  kalman_filter.cc  perception_gflags.cc  time.cc
src/sensors_fusion/src/common/math/: aabox2d.cc  box2d.cc  cartesian_frenet_conversion.cc  integral.cc  line_segment2d.cc  linear_interpolation.cc  linear_quadratic_regulator.cc  matrix_operations.cc  mpc_osqp.cc  polygon2d.cc  vec2d.cc
src/sensors_fusion/src/common/sensor_manager/: sensor_manager.cc
src/sensors_fusion/src/lib/config_manager/: config_manager.cc
src/sensors_fusion/src/lib/data_association/hm_data_association/: hm_tracks_objects_match.cc  probabilities.cc  track_object_distance.cc  track_object_similarity.cc
src/sensors_fusion/src/lib/data_fusion/: dst_existence_fusion.cc  dst_type_fusion.cc  kalman_motion_fusion.cc  pbf_shape_fusion.cc  pbf_tracker.cc
src/sensors_fusion/src/lib/fusion_system/probabilistic_fusion/: probabilistic_fusion.cc
src/sensors_fusion/src/lib/gatekeeper/pbf_gatekeeper/: pbf_gatekeeper.cc
src/sensors_fusion/src/lib/registerer/: registerer.cc
src/sensors_fusion/src/util/: binary.cc  blob.cc  file.cc  object.cc  object_pool_types.cc  point_cloud_util.cc  polynomial.cc  syncedmem.cc
src/util/: CMakeLists.txt
src/util/msg/: Camera.msg  CameraLane.msg  GPSpublish.msg  GpsStatus.msg  Guidance.msg  LanePt.msg  LidarFault.msg  MovPlan.msg  PK_result.msg  PointCloud.msg  ReferenceLine.msg  ReferencePath.msg  ReferencePoint.msg  ScenePt.msg  TaskPoint.msg  TaskPoint3.msg  VehicleAutoEn.msg  VehicleCmd.msg  cicv_moving_object.msg  localizaionPosition.msg  moving_object.msg  moving_objects.msg  plan_trajectory.msg
src/util/tool/: rm_src.sh
